--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,9 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.3"
+    dataBinding {
+        enabled true
+    }
     defaultConfig {
         applicationId "com.example.android.quizapp"
         minSdkVersion 15
